force-app/main/default/objects/XactlyExpress__XCPeriod__c/XactlyExpress__XCPeriod__c.object-meta.xml
<CustomObject>
    <label>XCPeriod</label>
    <nameField>
        <label>XCPeriod Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCPeriods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>