force-app/main/default/objects/XactlyExpress__XCPeriod__c/fields/XactlyExpress__CurrencySwitched__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CurrencySwitched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CurrencySwitched</label>
    <type>Checkbox</type>
</CustomField>