force-app/main/default/objects/XactlyExpress__XCPeriod__c/fields/XactlyExpress__FiscalYearSettings__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__FiscalYearSettings__c</fullName>
    <label>FiscalYearSettings</label>
    <referenceTo>XactlyExpress__XCFiscalYearSettings__c</referenceTo>
    <relationshipLabel>XCPeriods</relationshipLabel>
    <relationshipName>XCPeriods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>