force-app/main/default/objects/XactlyExpress__XCPeriod__c/fields/XactlyExpress__IsForecastPeriod__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__IsForecastPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsForecastPeriod</label>
    <type>Checkbox</type>
</CustomField>