force-app/main/default/objects/XactlyExpress__XCPeriod__c/fields/XactlyExpress__Number__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Number__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>