force-app/main/default/objects/XactlyExpress__XCPeriod__c/fields/XactlyExpress__PeriodLabel__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PeriodLabel__c</fullName>
    <label>PeriodLabel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>