force-app/main/default/objects/XactlyExpress__XCPeriod__c/fields/XactlyExpress__StartDate__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__StartDate__c</fullName>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>