force-app/main/default/objects/XactlyExpress__XCPeriod__c/listViews/XactlyExpress__All.listView-meta.xml
<ListView>
    <fullName>XactlyExpress__All</fullName>
    <columns>NAME</columns>
    <columns>XactlyExpress__StartDate__c</columns>
    <columns>XactlyExpress__EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>